# CircadianViewer

./: CMakeLists.txt  ColorModel.cpp  ColorModel.h  KelvinGradient.qml  KelvinInput.qml  Main.qml  README.md  main.cpp
